--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,6 +2,7 @@ name: flutter_force_directed_graph
 description: Force directed graph
 version: 1.0.0
 homepage: https://github.com/SkywalkerDarren/flutter_force_directed_graph
+publish_to: 'https://pub.dev'
 
 environment:
   sdk: '>=2.18.6 <3.0.0'
@@ -10,13 +11,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_lints: ^2.0.0
+  vector_math: ^2.1.0
+  collection: ^1.16.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
-  vector_math: ^2.1.0
-  collection: ^1.16.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
