--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,6 +3,8 @@ description: Force directed graph
 version: 1.0.0
 homepage: https://github.com/SkywalkerDarren/flutter_force_directed_graph
 publish_to: 'https://pub.dev'
+repository: https://github.com/SkywalkerDarren/flutter_force_directed_graph
+issue_tracker: https://github.com/SkywalkerDarren/flutter_force_directed_graph/issues
 
 environment:
   sdk: '>=2.18.6 <3.0.0'
