--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: flutter_force_directed_graph
-description: Force directed graph
+description: Flutter Force Directed Graph is a Flutter package that helps you create a force directed graph visualization in your Flutter applications.
 version: 1.0.0
-homepage: https://github.com/SkywalkerDarren/flutter_force_directed_graph
+homepage: https://github.com/SkywalkerDarren
 publish_to: 'https://pub.dev'
 repository: https://github.com/SkywalkerDarren/flutter_force_directed_graph
 issue_tracker: https://github.com/SkywalkerDarren/flutter_force_directed_graph/issues
