--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -6,5 +6,18 @@ on:
       - 'v[0-9]+.[0-9]+.[0-9]+*'
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: subosito/flutter-action@v2.10.0
+        with:
+          channel: 'stable'
+      - run: flutter pub get
+      - run: flutter test -v
+
+  health:
+    uses: dart-lang/ecosystem/.github/workflows/health.yaml@main
+
   publish:
     uses: dart-lang/setup-dart/.github/workflows/publish.yml@v1
