--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -10,7 +10,7 @@ on:
       - 'v[0-9]+.[0-9]+.[0-9]+*'
 
 jobs:
-  test:
+  publish:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -19,9 +19,5 @@ jobs:
           channel: 'stable'
       - run: flutter pub get
       - run: flutter test -v
-
-  health:
-    uses: dart-lang/ecosystem/.github/workflows/health.yaml@main
-
-  publish:
-    uses: dart-lang/setup-dart/.github/workflows/publish.yml@v1
+      - uses: dart-lang/ecosystem/.github/workflows/health.yaml@main
+      - uses: dart-lang/setup-dart/.github/workflows/publish.yml@v1
