--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -10,7 +10,12 @@ on:
       - 'v[0-9]+.[0-9]+.[0-9]+*'
 
 jobs:
-  setup:
+  health:
+    needs: setup
+    uses: dart-lang/ecosystem/.github/workflows/health.yaml@main
+
+  publish:
+    needs: setup
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -19,11 +24,5 @@ jobs:
           channel: 'stable'
       - run: flutter pub get
       - run: flutter test -v
-
-  health:
-    needs: setup
-    uses: dart-lang/ecosystem/.github/workflows/health.yaml@main
-
-  publish:
-    needs: health
-    uses: dart-lang/setup-dart/.github/workflows/publish.yml@v1
+      - run: flutter pub publish --dry-run
+      - run: flutter pub publish -f
